# TPP2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _all_flags_8cpp.html  _all_flags_8cpp__incl.map  _all_flags_8cpp__incl.md5  _all_flags_8h.html  _all_flags_8h__dep__incl.map  _all_flags_8h__dep__incl.md5  _all_flags_8h__incl.map  _all_flags_8h_source.html  _all_squad_templates_8cpp.html  _all_squad_templates_8cpp.js  _all_squad_templates_8cpp__incl.map  _all_squad_templates_8cpp__incl.md5  _all_squad_templates_8h.html  _all_squad_templates_8h__dep__incl.map  _all_squad_templates_8h__dep__incl.md5  _all_squad_templates_8h__incl.map  _all_squad_templates_8h__incl.md5  _all_squad_templates_8h_source.html  _all_units_8cpp.html  _all_units_8cpp.js  _all_units_8cpp__incl.map  _all_units_8cpp__incl.md5  _all_units_8h.html  _all_units_8h.js  _all_units_8h__dep__incl.map  _all_units_8h__dep__incl.md5  _all_units_8h__incl.map  _all_units_8h__incl.md5  _all_units_8h_source.html  _armored_unit_8cpp.html  _armored_unit_8cpp__incl.map  _armored_unit_8cpp__incl.md5  _armored_unit_8h.html  _armored_unit_8h__dep__incl.map  _armored_unit_8h__dep__incl.md5  _armored_unit_8h__incl.map  (+909 more)
.github/workflows/: main.yml
html/: _all_flags_8cpp.js  _all_flags_8cpp__incl.map  _all_flags_8cpp__incl.md5  _all_flags_8h.js  _all_flags_8h__dep__incl.md5  _all_flags_8h__incl.md5  _all_flags_8h_source.html  _all_squad_templates_8cpp__incl.map  _all_squad_templates_8h.js  _all_squad_templates_8h__incl.map  _all_squad_templates_8h_source.html  _all_units_8cpp__incl.map  _all_units_8cpp__incl.md5  _all_units_8h__dep__incl.map  _all_units_8h__dep__incl.md5  _all_units_8h__incl.map  _all_units_8h_source.html  _button_8cpp__incl.map  _button_8cpp__incl.md5  _button_8h__dep__incl.md5  _button_8h__incl.md5  _cell_8cpp_a9df5fb324f57f1962ec1804efcfada6c_icgraph.md5  _cell_8h.js  _cell_8h__dep__incl.map  _cell_8h__dep__incl.md5  _cell_8h__incl.map  _cell_8h_adf10dc3d9e6050d91e7f47adaba7bc17_cgraph.map  _cell_8h_source.html  _click_action_8h.html  _click_action_8h__dep__incl.md5  _click_action_8h__incl.md5  _click_action_8h_source.html  _facade_8cpp__incl.md5  _factory_8cpp.html  _factory_8cpp__incl.md5  _factory_8h.html  _factory_8h__dep__incl.md5  _factory_8h__incl.map  _factory_8h__incl.md5  _flag_8cpp.html  (+334 more)
html/search/: all_1.js  all_3.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_4.js  classes_5.js  classes_6.js  enums_1.js  enumvalues_0.js  enumvalues_3.js  enumvalues_5.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  files_b.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_a.js  functions_b.js  functions_e.js  functions_f.js  namespaces_0.js  namespaces_4.js  typedefs_1.js  (+11 more)
include/: CMakeLists.txt  Cell.h  GameObject.h  Squad.h  Unit.h  UnitOrder.h
include/GameLogic/: Action.h  AllFlags.h  AllUnits.h  Cell.h  Factory.h  Flag.h  Player.h  Squad.h  SquadOrder.h  SquadTemplate.h  Unit.h  UnitOrder.h
include/GameLogic/Squad/: Action.h  AllSquadTemplates.h  Squad.h  SquadOrder.h  SquadTemplate.h
include/GameLogic/Units/: AllUnits.h  ArmoredUnit.h  ArmoredUnitFactory.h  Factory.h  LandUnit.h  LandUnitFactory.h  TransportUnit.h  TransportUnitFactory.h  Unit.h  UnitOrder.h
include/engine/: Action.h  Logger.h  NetworkManager.h  clickableGameObject.h  config.h  gameController.h  gameObject.h  gameplayClickableGameObject.h  renderParams.h
include/engine/GUI/: Button.h  GuiList.h  GuiObject.h  GuiScroll.h  GuiStrip.h
include/engine/actions/: ClickAction.h  None.h  SetSquadPath.h  SpawnAction.h
include/graphics/: Facade.h  FanFacade.h  SFMLFacade.h  Textures.h
include/util/: CMakeLists.txt  cellgen.h  geometry.h  pathfinding.h
resources/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  (+74 more)
server/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/GameLogic/: Action.cpp  AllFlags.cpp  AllUnits.cpp  CMakeLists.txt  Cell.cpp  Factory.cpp  Flag.cpp  Player.cpp  Squad.cpp  SquadOrder.cpp  SquadTemplate.cpp  Unit.cpp  UnitOrder.cpp
src/GameLogic/Squad/: Action.cpp  AllSquadTemplates.cpp  CMakeLists.txt  Squad.cpp  SquadOrder.cpp  SquadTemplate.cpp
src/GameLogic/Units/: AllUnits.cpp  ArmoredUnit.cpp  ArmoredUnitFactory.cpp  CMakeLists.txt  Factory.cpp  LandUnit.cpp  LandUnitFactory.cpp  TransportUnit.cpp  TransportUnitFactory.cpp  Unit.cpp  UnitOrder.cpp
src/engine/: Action.cpp  CMakeLists.txt  Logger.cpp  NetworkManager.cpp  config.cpp  gameController.cpp  gameObject.cpp  gameplayClickableGameObject.cpp
src/engine/GUI/: Button.cpp  CMakeLists.txt  GuiList.cpp  GuiObject.cpp  GuiScroll.cpp  GuiStrip.cpp
src/engine/actions/: CMakeLists.txt  ClickAction.cpp  None.cpp  SetSquadPath.cpp  SpawnAction.cpp
src/graphics/: CMakeLists.txt  Facade.cpp  SFMLFacade.cpp  Textures.cpp
src/util/: CMakeLists.txt  cellgen.cpp  delaunay.cpp  geometry.cpp  pathfinding.cpp
